ver 2.0 更改新聞排版&程式排版美化

--- a/air-news2.html
+++ b/air-news2.html
@@ -22,11 +22,11 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-          <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
-          <li><a href="air.html"><span class="nav-label">Air</span></a></li>
-          <li><a href="water.html"><span class="nav-label">Water</span></a></li>
-          <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
-          <li><a href="store.html"><span class="nav-label">Store</span></a></li>
+            <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
+            <li><a href="air.html"><span class="nav-label">Air</span></a></li>
+            <li><a href="water.html"><span class="nav-label">Water</span></a></li>
+            <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
+            <li><a href="store.html"><span class="nav-label">Store</span></a></li>
         </ul>
     </nav>
 
@@ -38,22 +38,26 @@
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
-          <div class="row">
-            <div class="col-xs-12 col-sm-12 col-lg-12 box">
-              <p>環境監察人員在中國北方發現，將近1.4萬家企業，也就是70%的受檢企業，未達到空氣污染控制方面的標準。</p>
-              <p>國家通訊社新華社稱，中國環保部調集的監察人員在對中國北方的28個城市進行為期兩個月的督查後得出了上述結論。所涉企業和行業範疇殊異，其中包括毛料加工和傢具製造企業。</p>
-              <p>督查組檢查出4700餘家「散亂污」問題企業，儘管中國領導人誓言打擊污染企業，但亂排污的工廠目前仍是空氣、水和土壤嚴重污染的元兇之一。中國廣泛存在的污染問題，已躋身該國公民最擔心的問題之列。</p>
-              <p>本週，在網上流傳的一份所注日期為6月10日的通告，也引發了關於中國能否填補應對氣候變化問題的國際領導力真空的質疑。身為全世界最大溫室氣體排放國的中國，一直敦促各國遵守巴黎氣候協定，儘管川普總統要讓美國這個歷史上的最大溫室氣體排放國退出該協定。</p>
-              <p>中國已承諾會實現某些目標，以便竭力限制或降低排放；其領導表示他們有意遏制煤炭的使用。</p>
-              <p>近年來，主要是由於經濟增長放緩，作為溫室氣體最大來源的煤炭消費趨於持平或有所下滑。但燃煤的國有企業——包括電力、鋼鐵和水泥產業的企業——仍然頗具影響力，讓官方限制煤炭消費的努力遭遇了挑戰。</p>
-              <p>煤炭還是空氣污染的最大來源，污染物就包括被科學家認定極其有害、通常被稱為PM2.5的細顆粒物。在環繞著北京的河北省，燃煤的鋼鐵廠排放著大量的空氣污染物和溫室氣體。</p>
-              <p>環保部派出的監察人員此次督查的京津冀地區，是一個巨大的城市集群，北京、天津和河北都被囊括其中。北京市約有2200萬人口，天津市則有1500萬。</p>
-              <p>環保部今年4月宣布，為了改善空氣質量，它將在一年時間裡開展一系列督查行動。它說約有5600名環境執法人員會被派到北京、天津和京津冀地區的26個較小的城市。</p>
-              <p>環保部已經發通告公布了幾輪督查的部分結果。最新一份通告稱，在近日的一輪督查中，受檢的467家企業中竟然有350家存在「環境問題」，佔比75%。相關問題包括缺乏污染控制機制和污水處理設施。</p>
-              <p>中國北方的一些城市，身處世界上空氣污染最嚴重的地方之列，只有印度和伊朗的城市中心區能出其右。中國總理李克強已經發誓要「向污染宣戰」。</p>
-              <p>有時候，由於霧霾嚴重，北京的官員不得不發布「紅色預警」，讓學校停課，告訴人們待在家裡。</p>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-lg-4 box">
+                    <img src="img/air/china.png" alt="">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-8 box">
+                    <p>環境監察人員在中國北方發現，將近1.4萬家企業，也就是70%的受檢企業，未達到空氣污染控制方面的標準。</p>
+                    <p>國家通訊社新華社稱，中國環保部調集的監察人員在對中國北方的28個城市進行為期兩個月的督查後得出了上述結論。所涉企業和行業範疇殊異，其中包括毛料加工和傢具製造企業。</p>
+                    <p>督查組檢查出4700餘家「散亂污」問題企業，儘管中國領導人誓言打擊污染企業，但亂排污的工廠目前仍是空氣、水和土壤嚴重污染的元兇之一。中國廣泛存在的污染問題，已躋身該國公民最擔心的問題之列。</p>
+                    <p>本週，在網上流傳的一份所注日期為6月10日的通告，也引發了關於中國能否填補應對氣候變化問題的國際領導力真空的質疑。身為全世界最大溫室氣體排放國的中國，一直敦促各國遵守巴黎氣候協定，儘管川普總統要讓美國這個歷史上的最大溫室氣體排放國退出該協定。</p>
+                    <p>中國已承諾會實現某些目標，以便竭力限制或降低排放；其領導表示他們有意遏制煤炭的使用。</p>
+                    <p>近年來，主要是由於經濟增長放緩，作為溫室氣體最大來源的煤炭消費趨於持平或有所下滑。但燃煤的國有企業——包括電力、鋼鐵和水泥產業的企業——仍然頗具影響力，讓官方限制煤炭消費的努力遭遇了挑戰。</p>
+                    <p>煤炭還是空氣污染的最大來源，污染物就包括被科學家認定極其有害、通常被稱為PM2.5的細顆粒物。在環繞著北京的河北省，燃煤的鋼鐵廠排放著大量的空氣污染物和溫室氣體。</p>
+                    <p>環保部派出的監察人員此次督查的京津冀地區，是一個巨大的城市集群，北京、天津和河北都被囊括其中。北京市約有2200萬人口，天津市則有1500萬。</p>
+                    <p>環保部今年4月宣布，為了改善空氣質量，它將在一年時間裡開展一系列督查行動。它說約有5600名環境執法人員會被派到北京、天津和京津冀地區的26個較小的城市。</p>
+                    <p>環保部已經發通告公布了幾輪督查的部分結果。最新一份通告稱，在近日的一輪督查中，受檢的467家企業中竟然有350家存在「環境問題」，佔比75%。相關問題包括缺乏污染控制機制和污水處理設施。</p>
+                    <p>中國北方的一些城市，身處世界上空氣污染最嚴重的地方之列，只有印度和伊朗的城市中心區能出其右。中國總理李克強已經發誓要「向污染宣戰」。</p>
+                    <p>有時候，由於霧霾嚴重，北京的官員不得不發布「紅色預警」，讓學校停課，告訴人們待在家裡。</p>
+                </div>
             </div>
-          </div><!--row-->
+            <!--row-->
         </main>
         <div id="social">
             <a class="facebookBtn smGlobalBtn" href="#"></a>
@@ -65,12 +69,15 @@
 
             <div class="copyright">
                 <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
-            </div><!--copyright-->
+            </div>
+            <!--copyright-->
         </footer>
     </section>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden"
+        scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js"> </script>
+    <script src="js/bootstrap.min.js">
+    </script>
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/script.js"></script>
 </body>
