--- a/animal-news1.html
+++ b/animal-news1.html
@@ -22,11 +22,11 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-          <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
-          <li><a href="air.html"><span class="nav-label">Air</span></a></li>
-          <li><a href="water.html"><span class="nav-label">Water</span></a></li>
-          <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
-          <li><a href="store.html"><span class="nav-label">Store</span></a></li>
+            <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
+            <li><a href="air.html"><span class="nav-label">Air</span></a></li>
+            <li><a href="water.html"><span class="nav-label">Water</span></a></li>
+            <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
+            <li><a href="store.html"><span class="nav-label">Store</span></a></li>
         </ul>
     </nav>
 
@@ -38,14 +38,18 @@
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
-          <div class="row">
-            <div class="col-xs-12 col-sm-12 col-lg-12 box">
-                <p>106年暑假救國團桃園市團委會辦理「動物FUN城市~YA宿六福村』動物生態體驗營」，配合台灣目前最具規模之六福村開放式野生動物園，由專業動物保育員帶領，讓學員學習如何與動物相處，做好自然生態保育。</p>
-                <p>想零距離和動物親密相遇，身歷其境和動物一同呼吸的夜宿驚奇體驗嗎?想了解如何照料動物寶貝們，體驗動物保育員的獨特經驗嗎？保育員生態教室讓你了解動物的吃喝玩樂！從探索動物廚房：製作獅子小點心、走進動物急救站、犀牛任務課程、獼猴和長頸鹿的照顧餵養體驗、草食動物區蒸汽小火車、猛獸區專車導覽，透過課程深入了解動物保育員的工作，親近動物生態，還有六福村主題樂園及全台唯一的希臘風情渡假戲水樂園的歡樂探索體驗等著你喲！</p>
-                <p>另外也特別規劃於六福村非洲部落進行露營體驗，享受動物與原野間特有的大自然味道，夜晚聽到獅子老虎吼叫及長臂猿猿啼聲的驚奇感受！「動物FUN城市~YA宿六福村』動物生態體驗營」結合生態保育、生活教育與休閒活動，讓孩子過一個快樂豐富的假期，一同近距離體驗探索學習動物保育與野生動物生態之美！</p>
-                <p>桃園市救國團在暑假推出的夏令營，還有主題式警察體驗的「喚起心中的英雄-名為小小波麗士」、專屬教師自我成長的「溪頭森林教師舞蹈營」、適合親子一同參與的「墾丁夜宿海生館親子營」、讓孩子可以多元成長的「FUN肆冒險金銀島」及「進擊的小領袖-征服波特島」、體驗水上獨木舟的「17FUN暑假~龍門消暑趣-獨木舟挑戰營」…等，這些有趣、好玩又寓教於樂的活動，能滿足孩子強烈的求知慾與旺盛的活動力，同時也豐富孩子們的暑假生活。</p>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-lg-4 box">
+                    <img src="img/animal/fun.png" alt="">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-8 box">
+                    <p>106年暑假救國團桃園市團委會辦理「動物FUN城市~YA宿六福村』動物生態體驗營」，配合台灣目前最具規模之六福村開放式野生動物園，由專業動物保育員帶領，讓學員學習如何與動物相處，做好自然生態保育。</p>
+                    <p>想零距離和動物親密相遇，身歷其境和動物一同呼吸的夜宿驚奇體驗嗎?想了解如何照料動物寶貝們，體驗動物保育員的獨特經驗嗎？保育員生態教室讓你了解動物的吃喝玩樂！從探索動物廚房：製作獅子小點心、走進動物急救站、犀牛任務課程、獼猴和長頸鹿的照顧餵養體驗、草食動物區蒸汽小火車、猛獸區專車導覽，透過課程深入了解動物保育員的工作，親近動物生態，還有六福村主題樂園及全台唯一的希臘風情渡假戲水樂園的歡樂探索體驗等著你喲！</p>
+                    <p>另外也特別規劃於六福村非洲部落進行露營體驗，享受動物與原野間特有的大自然味道，夜晚聽到獅子老虎吼叫及長臂猿猿啼聲的驚奇感受！「動物FUN城市~YA宿六福村』動物生態體驗營」結合生態保育、生活教育與休閒活動，讓孩子過一個快樂豐富的假期，一同近距離體驗探索學習動物保育與野生動物生態之美！</p>
+                    <p>桃園市救國團在暑假推出的夏令營，還有主題式警察體驗的「喚起心中的英雄-名為小小波麗士」、專屬教師自我成長的「溪頭森林教師舞蹈營」、適合親子一同參與的「墾丁夜宿海生館親子營」、讓孩子可以多元成長的「FUN肆冒險金銀島」及「進擊的小領袖-征服波特島」、體驗水上獨木舟的「17FUN暑假~龍門消暑趣-獨木舟挑戰營」…等，這些有趣、好玩又寓教於樂的活動，能滿足孩子強烈的求知慾與旺盛的活動力，同時也豐富孩子們的暑假生活。</p>
+                </div>
             </div>
-          </div><!--row-->
+            <!--row-->
         </main>
         <div id="social">
             <a class="facebookBtn smGlobalBtn" href="#"></a>
@@ -57,12 +61,15 @@
 
             <div class="copyright">
                 <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
-            </div><!--copyright-->
+            </div>
+            <!--copyright-->
         </footer>
     </section>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden"
+        scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js"> </script>
+    <script src="js/bootstrap.min.js">
+    </script>
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/script.js"></script>
 </body>
