--- a/plastic-news1.html
+++ b/plastic-news1.html
@@ -22,11 +22,11 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-          <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
-          <li><a href="air.html"><span class="nav-label">Air</span></a></li>
-          <li><a href="water.html"><span class="nav-label">Water</span></a></li>
-          <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
-          <li><a href="store.html"><span class="nav-label">Store</span></a></li>
+            <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
+            <li><a href="air.html"><span class="nav-label">Air</span></a></li>
+            <li><a href="water.html"><span class="nav-label">Water</span></a></li>
+            <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
+            <li><a href="store.html"><span class="nav-label">Store</span></a></li>
         </ul>
     </nav>
 
@@ -38,14 +38,18 @@
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
-          <div class="row">
-                <div class="col-xs-12 col-sm-12 col-lg-12 box">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-lg-4 box">
+                    <img src="img/plastic/plastic-news1.png" alt="">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-8 box">
                     <p>日本神奈川縣橫須賀市的國立「海洋研究開發機構」為了喚起市民關注海洋垃圾問題，今年4月起以日本周邊為中心，發放堆積在深海的垃圾影片與照片，原來在逾6,200米深海底也藏了一個模型人頭，而海洋垃圾除了膠袋等物品，連漫畫、涼鞋也有。</p>
                     <p>「海洋研究開發機構」匯集潛水調查船歷時30年以上的調查，至今公佈了約1,700條短片及680張照片，更附註垃圾種類、發現地點、海洋深度及周圍是否有生物等資訊。大部份海洋垃圾都是塑膠袋、金屬罐，亦有運動鞋，而模型人頭則是調查船「深海6500」於1991年7月，在日本海溝逾6,200米深處的縫隙發現，人頭上除堆積了沉積物外，亦有海洋生物。</p>
                     <p>「海洋研究開發機構」自1980年代起，持續拍攝深海生物、地形、地質，但首次以展示垃圾為主，發言人說﹕「海洋垃圾已成為高峯會議題，成為全球性問題，將日常生活中難得一見的深海垃圾問題，藉著影片與照片讓大眾瞭解，希望能令大家重新反省海洋環保的問題。」</p>
                     <p>海洋最深處為馬里亞納海溝深1.9萬米的海底。1998年5月無人探測機「Kaikou」，發現幾個懷疑是塑膠袋的垃圾。</p>
                 </div>
-          </div><!--row-->
+            </div>
+            <!--row-->
         </main>
         <div id="social">
             <a class="facebookBtn smGlobalBtn" href="#"></a>
@@ -57,12 +61,15 @@
 
             <div class="copyright">
                 <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
-            </div><!--copyright-->
+            </div>
+            <!--copyright-->
         </footer>
     </section>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden"
+        scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js"> </script>
+    <script src="js/bootstrap.min.js">
+    </script>
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/script.js"></script>
 </body>
