--- a/plastic.html
+++ b/plastic.html
@@ -43,7 +43,7 @@
                     <figure>
                         <a href="plastic-news1.html"><img src="img/plastic/plastic-news1.png" /></a>
                     </figure>
-                    <span>日本6200米海底藏公仔頭 垃圾汙染海洋深處</span>
+                    <span>日本6200米海底藏垃圾，汙染海洋深處</span>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
                     <figure>
@@ -74,7 +74,8 @@
             <!--copyright-->
         </footer>
     </section>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden"
+        scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/bootstrap.min.js">
     </script>
