--- a/store.html
+++ b/store.html
@@ -32,7 +32,7 @@
         </ul>
     </nav>
     <section id="header" class="header store">
-        <h1 id="heading">I want your MONEY</h1>
+        <h1 id="heading">Store</h1>
         <h2>VISA ｜ Paypal ｜ MasterCard ｜ JCB</h2>
     </section>
     <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>Buy now</p></i></a>
@@ -52,7 +52,7 @@
                         <div class="caption">
                             <h4 class="group inner list-group-item-heading">環保筷</h4>
                             <p class="group inner list-group-item-text">
-                              好的筷子帶你上天堂。
+                                好的筷子帶你上天堂。
                             </p>
                             <div class="row">
                                 <div class="col-xs-12 col-md-6">
@@ -73,7 +73,7 @@
                         <div class="caption">
                             <h4 class="group inner list-group-item-heading">鐵吸管</h4>
                             <p class="group inner list-group-item-text">
-                              解決您咬吸管的壞習慣。
+                                解決您咬吸管的壞習慣。
                             </p>
                             <div class="row">
                                 <div class="col-xs-12 col-md-6">
@@ -94,7 +94,7 @@
                         <div class="caption">
                             <h4 class="group inner list-group-item-heading">保溫杯</h4>
                             <p class="group inner list-group-item-text">
-                              底迪，喝水囉。
+                                底迪，喝水囉。
                             </p>
                             <div class="row">
                                 <div class="col-xs-12 col-md-6">
@@ -115,7 +115,7 @@
                         <div class="caption">
                             <h4 class="group inner list-group-item-heading">飛機杯</h4>
                             <p class="group inner list-group-item-text">
-                              躺著玩，坐著玩，趴著玩，還是自己最好玩。
+                                躺著玩，坐著玩，趴著玩，還是自己最好玩。
                             </p>
                             <div class="row">
                                 <div class="col-xs-12 col-md-6">
@@ -136,7 +136,7 @@
                         <div class="caption">
                             <h4 class="group inner list-group-item-heading">環保購物袋</h4>
                             <p class="group inner list-group-item-text">
-                              環保材質，容易清洗。
+                                環保材質，容易清洗。
                             </p>
                             <div class="row">
                                 <div class="col-xs-12 col-md-6">
@@ -157,7 +157,7 @@
                         <div class="caption">
                             <h4 class="group inner list-group-item-heading">不鏽鋼水壺和馬克杯組</h4>
                             <p class="group inner list-group-item-text">
-                              哥喝的不是茶，是回憶。
+                                哥喝的不是茶，是回憶。
                             </p>
                             <div class="row">
                                 <div class="col-xs-12 col-md-6">
@@ -175,7 +175,7 @@
             </div>
         </div>
         <div onclick="window.open('member.html',config='height=700,width=700,toolbar=no');">
-          加入會員
+            加入會員
         </div>
     </main>
 
@@ -193,7 +193,8 @@
         <a class="googleplusBtn smGlobalBtn" href="#"></a>
         <a class="tumblrBtn smGlobalBtn" href="#"></a>
     </div>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden"
+        scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
