--- a/water-news1.html
+++ b/water-news1.html
@@ -22,11 +22,11 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-          <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
-          <li><a href="air.html"><span class="nav-label">Air</span></a></li>
-          <li><a href="water.html"><span class="nav-label">Water</span></a></li>
-          <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
-          <li><a href="store.html"><span class="nav-label">Store</span></a></li>
+            <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
+            <li><a href="air.html"><span class="nav-label">Air</span></a></li>
+            <li><a href="water.html"><span class="nav-label">Water</span></a></li>
+            <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
+            <li><a href="store.html"><span class="nav-label">Store</span></a></li>
         </ul>
     </nav>
 
@@ -38,14 +38,18 @@
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
-          <div class="row">
-                <div class="col-xs-12 col-sm-12 col-lg-12 box">
-                  <p>台北市最大的批發零售市場「環南市場」，被爆垃圾集中場的廢水，沒有經過妥善處理，就直接排入河裡、汙染河川，而且時間長達半年，台北市環保局稽查後封閉地面孔洞，依「水汙法」開罰市場自治會3萬元，並要求7月4號前重新接管，否則將再開罰。</p>
-                  <p>菜渣、垃圾堆滿集中場，原本廢水應該流入截留槽，透過衛工管線，進入污水廠處理後，再流入河川，不過卻從地面孔洞，排入箱涵，直接流進河川，依水汙法開罰3萬元。</p>
-                  <p>環保局稽查人員，以食用色素當追蹤劑，確實發現，廢水並沒有依照程序處理，造成河川污染，環南市場解釋，是為了讓積水順利排除，鑿洞時並不知道，下面就是箱涵。</p>
-                  <p>目前已將孔洞封閉，預計下週三天氣好轉後，會再發包改善排水孔道，環保局推估，廢水直接流入河川，時間已經超過半年，勒令要求7月4號前重新接管，否則再依法開罰3萬到3百萬。</p>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-lg-4 box">
+                    <img src="img/water/market.png" alt="">
                 </div>
-          </div><!--row-->
+                <div class="col-xs-12 col-sm-6 col-lg-8 box">
+                    <p>台北市最大的批發零售市場「環南市場」，被爆垃圾集中場的廢水，沒有經過妥善處理，就直接排入河裡、汙染河川，而且時間長達半年，台北市環保局稽查後封閉地面孔洞，依「水汙法」開罰市場自治會3萬元，並要求7月4號前重新接管，否則將再開罰。</p>
+                    <p>菜渣、垃圾堆滿集中場，原本廢水應該流入截留槽，透過衛工管線，進入污水廠處理後，再流入河川，不過卻從地面孔洞，排入箱涵，直接流進河川，依水汙法開罰3萬元。</p>
+                    <p>環保局稽查人員，以食用色素當追蹤劑，確實發現，廢水並沒有依照程序處理，造成河川污染，環南市場解釋，是為了讓積水順利排除，鑿洞時並不知道，下面就是箱涵。</p>
+                    <p>目前已將孔洞封閉，預計下週三天氣好轉後，會再發包改善排水孔道，環保局推估，廢水直接流入河川，時間已經超過半年，勒令要求7月4號前重新接管，否則再依法開罰3萬到3百萬。</p>
+                </div>
+            </div>
+            <!--row-->
         </main>
         <div id="social">
             <a class="facebookBtn smGlobalBtn" href="#"></a>
@@ -57,12 +61,15 @@
 
             <div class="copyright">
                 <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
-            </div><!--copyright-->
+            </div>
+            <!--copyright-->
         </footer>
     </section>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden"
+        scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js"> </script>
+    <script src="js/bootstrap.min.js">
+    </script>
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/script.js"></script>
 </body>
