--- a/water-news3.html
+++ b/water-news3.html
@@ -22,11 +22,11 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-          <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
-          <li><a href="air.html"><span class="nav-label">Air</span></a></li>
-          <li><a href="water.html"><span class="nav-label">Water</span></a></li>
-          <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
-          <li><a href="store.html"><span class="nav-label">Store</span></a></li>
+            <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
+            <li><a href="air.html"><span class="nav-label">Air</span></a></li>
+            <li><a href="water.html"><span class="nav-label">Water</span></a></li>
+            <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
+            <li><a href="store.html"><span class="nav-label">Store</span></a></li>
         </ul>
     </nav>
 
@@ -38,13 +38,17 @@
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
-          <div class="row">
-            <div class="col-xs-12 col-sm-12 col-lg-12 box">
-              <p>曾是雲林河川隨處可捕捉的田蚌，幾乎從河裡消失，從事物種復育的生態專家許春德20餘年前在北港溪還可找到田蚌，現在已不見蹤影，他懷疑河川污染造成生命力強韌的田蚌消失。</p>
-              <p>田蚌過去是河川最常見的貝類，白雲自然生態研究協會理事長許春德20餘年前復育本土物種，曾在北港溪找到田蚌，但這幾年不僅北港溪找不到，其他河川也未在見到田蚌蹤跡，僅剩水庫還可以發現，馬蹄蛤主題館長曾界崇也發現目前雲林沿海還可以找到田蚌的地方，多半集中在口湖、四湖等閒置的鰻魚魚塭。</p>
-              <p>許春德認為，田蚌生命力相當強韌，在河川消失的原因與水質過度污染有關；曾界崇指出，大肆人為開發，將埤塘填為土地利用，也是威脅田蚌生存原因之一，對生態保育是警訊。</p>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-lg-4 box">
+                    <img src="img/water/yunlin.png" alt="">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-8 box">
+                    <p>曾是雲林河川隨處可捕捉的田蚌，幾乎從河裡消失，從事物種復育的生態專家許春德20餘年前在北港溪還可找到田蚌，現在已不見蹤影，他懷疑河川污染造成生命力強韌的田蚌消失。</p>
+                    <p>田蚌過去是河川最常見的貝類，白雲自然生態研究協會理事長許春德20餘年前復育本土物種，曾在北港溪找到田蚌，但這幾年不僅北港溪找不到，其他河川也未在見到田蚌蹤跡，僅剩水庫還可以發現，馬蹄蛤主題館長曾界崇也發現目前雲林沿海還可以找到田蚌的地方，多半集中在口湖、四湖等閒置的鰻魚魚塭。</p>
+                    <p>許春德認為，田蚌生命力相當強韌，在河川消失的原因與水質過度污染有關；曾界崇指出，大肆人為開發，將埤塘填為土地利用，也是威脅田蚌生存原因之一，對生態保育是警訊。</p>
+                </div>
             </div>
-          </div><!--row-->
+            <!--row-->
         </main>
         <div id="social">
             <a class="facebookBtn smGlobalBtn" href="#"></a>
@@ -56,12 +60,15 @@
 
             <div class="copyright">
                 <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
-            </div><!--copyright-->
+            </div>
+            <!--copyright-->
         </footer>
     </section>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden"
+        scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js"> </script>
+    <script src="js/bootstrap.min.js">
+    </script>
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/script.js"></script>
 </body>
