--- a/animal-news3.html
+++ b/animal-news3.html
@@ -22,11 +22,11 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-          <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
-          <li><a href="air.html"><span class="nav-label">Air</span></a></li>
-          <li><a href="water.html"><span class="nav-label">Water</span></a></li>
-          <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
-          <li><a href="store.html"><span class="nav-label">Store</span></a></li>
+            <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
+            <li><a href="air.html"><span class="nav-label">Air</span></a></li>
+            <li><a href="water.html"><span class="nav-label">Water</span></a></li>
+            <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
+            <li><a href="store.html"><span class="nav-label">Store</span></a></li>
         </ul>
     </nav>
 
@@ -38,15 +38,19 @@
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
-          <div class="row">
-            <div class="col-xs-12 col-sm-12 col-lg-12 box">
-                <p>黑面琵鷺是全球瀕危鳥種，總數量不超過3000隻，在台灣為一級保育類野生動物。新北市八里海岸近日喜見15隻黑面琵鷺在天空飛翔，吸引許多民眾目光佇留。新北市動保處表示，現在正值黑面琵鷺春天北返的季節，在北返前會密集覓食，八里海岸及挖仔尾紅樹林區擁有豐富的各種生物，吸引他們短暫棲息。</p>
-                <p>黑面琵鷺偏好在夜間活動，白天大都群聚在空曠處及不易受干擾的海岸灘地休息。飛行時其頸部會伸直，姿態優雅，又被稱為『黑面舞者』。覓食時多成小群集體覓食，長長的嘴喙略張開，伸入水中左右擺動尋找，捕食小型的魚類和蝦，模樣煞是可愛。</p>
-                <p>去年11月現正值候鳥過境的季節，有6隻黑面琵鷺和1隻白琵鷺現身金山地區，其中1隻黑面琵鷺腳上甚至帶有標放的腳環，八里海岸近日亦出現15隻黑面琵鷺棲息停留。</p>
-                <p>據過往紀錄，這幾年在金山的生態農田、八里挖仔尾紅樹林都可以見到黑面琵鷺的蹤跡，牠們在這些地方覓食、休息、理羽、洗澡等。由於這裡的生態豐富，食物種類多，包含彈塗魚、招潮蟹等，常吸引過境鳥及侯鳥在此棲息，也成為欣賞過境鳥的重要賞鳥據點。</p>
-                <p>動保處提醒，依據野生動物保育法規定，任何人均不得無故騷擾保育類野生動物，遵守呼籲賞鳥民眾，不接觸、不餵食、不驚嚇秩序，否則將可處30萬元罰金併科1年以下有期徒刑。</p>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-lg-4 box">
+                    <img src="img/animal/spoonbill.png" alt="">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-8 box">
+                    <p>黑面琵鷺是全球瀕危鳥種，總數量不超過3000隻，在台灣為一級保育類野生動物。新北市八里海岸近日喜見15隻黑面琵鷺在天空飛翔，吸引許多民眾目光佇留。新北市動保處表示，現在正值黑面琵鷺春天北返的季節，在北返前會密集覓食，八里海岸及挖仔尾紅樹林區擁有豐富的各種生物，吸引他們短暫棲息。</p>
+                    <p>黑面琵鷺偏好在夜間活動，白天大都群聚在空曠處及不易受干擾的海岸灘地休息。飛行時其頸部會伸直，姿態優雅，又被稱為『黑面舞者』。覓食時多成小群集體覓食，長長的嘴喙略張開，伸入水中左右擺動尋找，捕食小型的魚類和蝦，模樣煞是可愛。</p>
+                    <p>去年11月現正值候鳥過境的季節，有6隻黑面琵鷺和1隻白琵鷺現身金山地區，其中1隻黑面琵鷺腳上甚至帶有標放的腳環，八里海岸近日亦出現15隻黑面琵鷺棲息停留。</p>
+                    <p>據過往紀錄，這幾年在金山的生態農田、八里挖仔尾紅樹林都可以見到黑面琵鷺的蹤跡，牠們在這些地方覓食、休息、理羽、洗澡等。由於這裡的生態豐富，食物種類多，包含彈塗魚、招潮蟹等，常吸引過境鳥及侯鳥在此棲息，也成為欣賞過境鳥的重要賞鳥據點。</p>
+                    <p>動保處提醒，依據野生動物保育法規定，任何人均不得無故騷擾保育類野生動物，遵守呼籲賞鳥民眾，不接觸、不餵食、不驚嚇秩序，否則將可處30萬元罰金併科1年以下有期徒刑。</p>
+                </div>
             </div>
-          </div><!--row-->
+            <!--row-->
         </main>
         <div id="social">
             <a class="facebookBtn smGlobalBtn" href="#"></a>
@@ -58,12 +62,15 @@
 
             <div class="copyright">
                 <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
-            </div><!--copyright-->
+            </div>
+            <!--copyright-->
         </footer>
     </section>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden"
+        scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js"> </script>
+    <script src="js/bootstrap.min.js">
+    </script>
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/script.js"></script>
 </body>
