--- a/animal.html
+++ b/animal.html
@@ -22,11 +22,11 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-          <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
-          <li><a href="air.html"><span class="nav-label">Air</span></a></li>
-          <li><a href="water.html"><span class="nav-label">Water</span></a></li>
-          <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
-          <li><a href="store.html"><span class="nav-label">Store</span></a></li>
+            <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
+            <li><a href="air.html"><span class="nav-label">Air</span></a></li>
+            <li><a href="water.html"><span class="nav-label">Water</span></a></li>
+            <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
+            <li><a href="store.html"><span class="nav-label">Store</span></a></li>
         </ul>
     </nav>
 
@@ -38,20 +38,27 @@
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
-          <div class="row">
+            <div class="row">
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="animal-news1.html"><img src="img/animal/fun.png" /></a></figure>
+                    <figure>
+                        <a href="animal-news1.html"><img src="img/animal/fun.png" /></a>
+                    </figure>
                     <span>想當動物保育員 快來動物FUN城市</span>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="animal-news2.html"><img src="img/animal/pet.png" /></a></figure>
+                    <figure>
+                        <a href="animal-news2.html"><img src="img/animal/pet.png" /></a>
+                    </figure>
                     <span>桃猿首創「愛PET趴」球場開放動物認養</span>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="animal-news3.html"><img src="img/animal/spoonbill.png" /></a></figure>
+                    <figure>
+                        <a href="animal-news3.html"><img src="img/animal/spoonbill.png" /></a>
+                    </figure>
                     <span>瀕臨絕種！ 八里海岸喜見15隻黑面琵鷺</span>
                 </div>
-          </div><!--row-->
+            </div>
+            <!--row-->
         </main>
         <div id="social">
             <a class="facebookBtn smGlobalBtn" href="#"></a>
@@ -63,12 +70,15 @@
 
             <div class="copyright">
                 <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
-            </div><!--copyright-->
+            </div>
+            <!--copyright-->
         </footer>
     </section>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden"
+        scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js"> </script>
+    <script src="js/bootstrap.min.js">
+    </script>
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/script.js"></script>
 </body>
