--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
         <a class="googleplusBtn smGlobalBtn" href="#"></a>
         <a class="tumblrBtn smGlobalBtn" href="#"></a>
     </div>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden"
+        scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/script.js"></script>
