--- a/member.html
+++ b/member.html
@@ -1,102 +1,106 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Sign-Up/Login Form</title>
-  <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <meta charset="UTF-8">
+    <title>Sign-Up/Login Form</title>
+    <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
 
-      <link rel="stylesheet" href="css/member.css">
+    <link rel="stylesheet" href="css/member.css">
 
 
 </head>
 
 <body>
-  <div class="form">
+    <div class="form">
 
-      <ul class="tab-group">
-        <li class="tab active"><a href="#signup">Sign Up</a></li>
-        <li class="tab"><a href="#login">Log In</a></li>
-      </ul>
+        <ul class="tab-group">
+            <li class="tab active"><a href="#signup">Sign Up</a></li>
+            <li class="tab"><a href="#login">Log In</a></li>
+        </ul>
 
-      <div class="tab-content">
-        <div id="signup">
-          <h1>Sign Up for Free</h1>
+        <div class="tab-content">
+            <div id="signup">
+                <h1>Sign Up for Free</h1>
 
-          <!--<form action="/" method="post">-->
+                <!--<form action="/" method="post">-->
 
-          <div class="top-row">
-            <div class="field-wrap">
-              <label>
+                <div class="top-row">
+                    <div class="field-wrap">
+                        <label>
                 First Name<span class="req">*</span>
               </label>
-              <input type="text" required autocomplete="off" id="fname">
-            </div>
+                        <input type="text" required autocomplete="off" id="fname">
+                    </div>
 
-            <div class="field-wrap">
-              <label>
+                    <div class="field-wrap">
+                        <label>
                 Last Name<span class="req">*</span>
               </label>
-              <input type="text"required autocomplete="off" id="lname">
-            </div>
-          </div>
+                        <input type="text" required autocomplete="off" id="lname">
+                    </div>
+                </div>
 
-          <div class="field-wrap">
-            <label>
+                <div class="field-wrap">
+                    <label>
               Email Address<span class="req">*</span>
             </label>
-            <input type="email"required autocomplete="off" id="email">
-          </div>
+                    <input type="email" required autocomplete="off" id="email">
+                </div>
 
-          <div class="field-wrap">
-            <label>
+                <div class="field-wrap">
+                    <label>
               Set A Password(at least 6 words)<span class="req">*</span>
             </label>
-            <input type="password"required autocomplete="off" id="password">
-          </div>
+                    <input type="password" required autocomplete="off" id="password">
+                </div>
 
-          <button type="submit" class="button button-block" id="joinus" onclick="window.alert('註冊成功');">Get Started</button>
+                <button type="submit" class="button button-block" id="joinus" onclick="window.alert('註冊成功');">Get Started</button>
 
-          </form>
+                </form>
 
-        </div>
+            </div>
 
-        <div id="login">
-          <h1>Welcome Back!</h1>
+            <div id="login">
+                <h1>Welcome Back!</h1>
 
-          <!--<form action="/" method="post">-->
+                <!--<form action="/" method="post">-->
 
-            <div class="field-wrap">
-            <label>
+                <div class="field-wrap">
+                    <label>
               Email Address<span class="req">*</span>
             </label>
-            <input type="email"required autocomplete="off" id="login_email">
-          </div>
+                    <input type="email" required autocomplete="off" id="login_email">
+                </div>
 
-          <div class="field-wrap">
-            <label>
+                <div class="field-wrap">
+                    <label>
               Password<span class="req">*</span>
             </label>
-            <input type="password"required autocomplete="off" id="login_password">
-          </div>
+                    <input type="password" required autocomplete="off" id="login_password">
+                </div>
 
-          <p class="forgot"><a href="#">Forgot Password?</a></p>
+                <p class="forgot"><a href="#">Forgot Password?</a></p>
 
-          <button class="button button-block" id="btnlogin" onclick="window.close();">Log In</button>
+                <button class="button button-block" id="btnlogin" onclick="window.close();">Log In</button>
 
-          </form>
+                </form>
+
+            </div>
 
         </div>
+        <!-- tab-content -->
 
-      </div><!-- tab-content -->
+    </div>
+    <!-- /form -->
 
-</div> <!-- /form -->
 
-  
-  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
-  <script src="js/member.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
+    <script src="js/member.js"></script>
 
 </body>
+
 </html>
