--- a/plastic-news3.html
+++ b/plastic-news3.html
@@ -22,11 +22,11 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-          <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
-          <li><a href="air.html"><span class="nav-label">Air</span></a></li>
-          <li><a href="water.html"><span class="nav-label">Water</span></a></li>
-          <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
-          <li><a href="store.html"><span class="nav-label">Store</span></a></li>
+            <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
+            <li><a href="air.html"><span class="nav-label">Air</span></a></li>
+            <li><a href="water.html"><span class="nav-label">Water</span></a></li>
+            <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
+            <li><a href="store.html"><span class="nav-label">Store</span></a></li>
         </ul>
     </nav>
 
@@ -38,8 +38,11 @@
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
-          <div class="row">
-                <div class="col-xs-12 col-sm-12 col-lg-12 box">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-lg-4 box">
+                    <img src="img/plastic/plastic-news3.png" alt="">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-8 box">
                     <p>雲林縣解決垃圾危機，同意外縣市以垃圾換底渣要求，迄今已運回5200公噸，分別置於古坑、虎尾、口湖，環保局長林長造表示，目前已有200多公噸底渣用於公共工程。</p>
                     <p>縣議員賴明源表示，永置在古坑鄉的底渣有2172.87公噸，地方質疑有污染環境疑慮，引起民眾抗爭，要求6月底前要將底渣運除，目前僅運出200多公噸底渣，用在水利處污水下水道工程中，但距離地方要求全部清除有很大距離，民眾已揚言不排除發動抗爭。</p>
                     <p>縣議員王又民也說，縣府多次說明「底渣」是產品，但底渣爭議是不可接觸土壤、不可接觸水源、不可種植、不可跟人群一起，就像塩酸是產品，是可以用在清潔地板上，但倒在地上就是有害廢棄物，縣府應參考鄰近縣市的作法，用不透水袋將底渣裝袋，不要污染土地，並制訂底渣存放的統一規範及標準。</p>
@@ -47,7 +50,8 @@
                     <p>林長造表示，垃圾換底渣回運已積極尋求中央環保署協助調度，雲林地方公共工程也會協助去化。</p>
                     <p>縣長李進勇也說，不一定要換回底渣，可朝向換生廚餘方向努力。</p>
                 </div>
-          </div><!--row-->
+            </div>
+            <!--row-->
         </main>
         <div id="social">
             <a class="facebookBtn smGlobalBtn" href="#"></a>
@@ -59,12 +63,15 @@
 
             <div class="copyright">
                 <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
-            </div><!--copyright-->
+            </div>
+            <!--copyright-->
         </footer>
     </section>
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden"
+        scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js"> </script>
+    <script src="js/bootstrap.min.js">
+    </script>
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/script.js"></script>
 </body>
