Ver 2.1 →修改加入會員鼠標

--- a/store.html
+++ b/store.html
@@ -174,7 +174,7 @@
                 </div>
             </div>
         </div>
-        <div onclick="window.open('member.html',config='height=700,width=700,toolbar=no');">
+        <div onclick="window.open('member.html',config='height=700,width=700,toolbar=no');" class="joinbtn">
             加入會員
         </div>
     </main>
