ver 2.2 Final Maybe - 一些小修正

--- a/store.html
+++ b/store.html
@@ -17,6 +17,7 @@
         <i class="fa fa-home fa-5x" aria-hidden="true"></i>
     </a>
     <div id="displayname"></div>
+    <i class="fa fa-user-circle-o fa-3x" aria-hidden="true" onclick="window.open('member.html',config='height=700,width=700,toolbar=no');" class="joinbtn"></i>
     <div id="nav-trigger" class="nav-trigger open">
         <span class="line"></span>
         <span class="line"></span>
@@ -61,7 +62,7 @@
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-6">
-                                    <a class="btn btn-success" href="#">Add to cart</a>
+                                    <button class="btn btn-success" href="#" id="buy_item01">Add to cart</a>
                                 </div>
                             </div>
                         </div>
@@ -82,7 +83,7 @@
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-6">
-                                    <a class="btn btn-success" href="#">Add to cart</a>
+                                    <button class="btn btn-success" href="#" id="buy_item02">Add to cart</a>
                                 </div>
                             </div>
                         </div>
@@ -103,7 +104,7 @@
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-6">
-                                    <a class="btn btn-success" href="#">Add to cart</a>
+                                  <button class="btn btn-success" href="#" id="buy_item03">Add to cart</a>
                                 </div>
                             </div>
                         </div>
@@ -124,7 +125,7 @@
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-6">
-                                    <a class="btn btn-success" href="#">Add to cart</a>
+                                    <button class="btn btn-success" href="#" id="buy_item04">Add to cart</a>
                                 </div>
                             </div>
                         </div>
@@ -145,7 +146,7 @@
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-6">
-                                    <a class="btn btn-success" href="#">Add to cart</a>
+                                    <button class="btn btn-success" href="#" id="buy_item05">Add to cart</a>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +167,7 @@
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-6">
-                                    <a class="btn btn-success" href="#">Add to cart</a>
+                                    <button class="btn btn-success" href="#" id="buy_item06">Add to cart</a>
                                 </div>
                             </div>
                         </div>
@@ -175,7 +176,7 @@
             </div>
         </div>
         <div onclick="window.open('member.html',config='height=700,width=700,toolbar=no');" class="joinbtn">
-            加入會員
+            <button type="button" class="btn btn-primary">加入我們</button>
         </div>
     </main>
 
