--- a/member.html
+++ b/member.html
@@ -23,7 +23,7 @@
 
         <div class="tab-content">
             <div id="signup">
-                <h1>Sign Up for Free</h1>
+                <h1>快速註冊</h1>
 
                 <!--<form action="/" method="post">-->
 
@@ -64,7 +64,7 @@
             </div>
 
             <div id="login">
-                <h1>Welcome Back!</h1>
+                <h1>歡迎回來</h1>
 
                 <!--<form action="/" method="post">-->
 
@@ -82,7 +82,7 @@
                     <input type="password" required autocomplete="off" id="login_password">
                 </div>
 
-                <p class="forgot"><a href="#">Forgot Password?</a></p>
+                <p class="forgot"><a href="#">忘記密碼?</a></p>
 
                 <button class="button button-block" id="btnlogin" onclick="window.close();">Log In</button>
 
