ver 2.2.1 移除舊加入會員

--- a/store.html
+++ b/store.html
@@ -175,9 +175,9 @@
                 </div>
             </div>
         </div>
-        <div onclick="window.open('member.html',config='height=700,width=700,toolbar=no');" class="joinbtn">
+        <!--<div onclick="window.open('member.html',config='height=700,width=700,toolbar=no');" class="joinbtn">
             <button type="button" class="btn btn-primary">加入我們</button>
-        </div>
+        </div>-->
     </main>
 
 
